--- a/src/main/resources/templates/registration.mustache
+++ b/src/main/resources/templates/registration.mustache
@@ -1,18 +1,88 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Spring Security Example </title>
+    <title>Spring Security Example </title>
 </head>
 <body>
-Add new user
-{{#message}}
-{{message}}
-{{/message}}
-<form action="/registration" method="post">
-  <div><label> User Name : <input type="text" name="username"/> </label></div>
-  <div><label> Password: <input type="password" name="password"/> </label></div>
-  <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
-  <div><input type="submit" value="Sign In"/></div>
-</form>
+
+
+
+<style>
+    html {
+        background-color:#214c84;
+        background-blend-mode:overlay;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        background-image:url('https://fileshare.gruzovichkof.ru/uploads/file-308-1602266934662.jpg');
+        background-repeat:no-repeat;
+        background-size:cover;
+        height:100%;
+    }
+
+    body {
+        background-color:transparent;
+    }
+
+    .registration-cssave{
+        padding:50px 0;
+    }
+
+
+    .registration-cssave form:hover{
+        box-shadow: 5px 5px 10px 10px white;
+        transition-duration: .2s;
+    }
+
+    .registration-cssave form {
+        max-width:800px;
+        padding:50px 70px;
+        border-radius:10px;
+        box-shadow:4px 4px 15px rgba(0, 0, 0, 0.2);
+        background-color:#fff;
+    }
+
+    .registration-cssave form h3 {
+        font-weight:bold;
+        margin-bottom:30px;
+    }
+
+    .registration-cssave .item {
+        border-radius:10px;
+        margin-bottom:25px;
+        padding:10px 20px;
+    }
+
+    .registration-cssave .create-account {
+        border-radius:30px;
+        padding:10px 20px;
+        font-size:18px;
+        font-weight:bold;
+        background-color:#3f93ff;
+        border:none;
+        color:white;
+        margin-top:20px;
+    }
+
+    @media (max-width: 576px) {
+        .registration-cssave form {
+            padding:50px 20px;
+        }
+    }
+
+</style>
+
+
+
+
+
+<div class="registration-cssave">
+    <form action="/registration" method="post">
+        <div class="form-group"><label> <input type="text" class="form-control item" name="username" placeholder="Новый Логин"/> </label></div>
+        <div class="form-group"><label> <input type="password" class="form-control item" name="password" placeholder="Новый Пароль"/> </label></div>
+        <input class="form-control item" type="hidden" name="_csrf" value="{{_csrf.token}}" />
+        <div class="form-group"><input class="form-control item" type="submit" value="Sign In"/></div>
+    </form>
+</div>
 </body>
 </html>
