--- a/src/main/resources/templates/autoblog.html
+++ b/src/main/resources/templates/autoblog.html
@@ -36,28 +36,28 @@
         Поиск
       </h4>
       <form method="post" action="filterDate" >
-        <input type="text" name="filter" placeholder="Поиск по дате записи">
-        <button type="submit">Найти</button>
+        <input type="text" name="filter" placeholder="Поиск по дате записи" style="padding: 0.5%; margin-bottom: 1%;">
+        <button type="submit" class="btn btn-success btn-sm">Найти</button>
       </form>
       <form method="post" action="filterName">
-        <input type="text" name="filter" placeholder="Поиск по автору">
-        <button type="submit">Найти</button>
+        <input type="text" name="filter" placeholder="Поиск по автору" style="padding: 0.5%; margin-bottom: 1%;">
+        <button type="submit" class="btn btn-success btn-sm">Найти</button>
       </form>
       <form method="post" action="filterDateName">
-        <input type="text" name="filter" placeholder="Поиск по дате и автору">
-        <button type="submit">Найти</button>
+        <input type="text" name="filter" placeholder="Поиск по дате и автору" style="padding: 0.5%; margin-bottom: 1%;">
+        <button type="submit" class="btn btn-success btn-sm">Найти</button>
       </form>
       <form method="post" action="filterText">
-        <input type="text" name="filter" placeholder="Поиск по тексту записи">
-        <button type="submit">Найти</button>
+        <input type="text" name="filter" placeholder="Поиск по тексту записи" style="padding: 0.5%; margin-bottom: 1%;">
+        <button type="submit" class="btn btn-success btn-sm">Найти</button>
       </form>
       <form method="post" action="filterDateText">
-        <input type="text" name="filter" placeholder="Поиск по дате и тексту записи">
-        <button type="submit">Найти</button>
+        <input type="text" name="filter" placeholder="Поиск по дате и тексту записи" style="padding: 0.5%; margin-bottom: 1%;">
+        <button type="submit" class="btn btn-success btn-sm">Найти</button>
       </form>
       <form method="post" action="filterALL">
-        <input type="text" name="filter" placeholder="Поиск по всем критериям сразу">
-        <button type="submit">Найти</button>
+        <input type="text" name="filter" placeholder="Поиск по всем критериям сразу" style="padding: 0.5%">
+        <button type="submit" class="btn btn-success btn-sm">Найти</button>
       </form>
     </div>
   </div>
